# benchflow

./: .dev-notes.json  .env.sample  .gitignore  .mintignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CLAWSBENCH-COMPAT.md  CONTEXT.md  GAP_ANALYSIS.md  ISSUES.md  LICENSE  PLAN.md  README.md  STATUS.md  STRESS-TEST-v0.6.0.md  docs.json  pyproject.toml
.claude/: launch.json  settings.json
.claude/dev-docs/: 0.3-plan.md  architecture.md  harden-sandbox.md  labs.md
.claude/skills/: arch-audit.md  benchflow  code-cleanup.md  docs-review.md  test-review.md
.dev-docs/: 0.3-plan.rendered.html  harden-sandbox.md  launch-post-0.2.2-draft.md  multi-agent-sandbox-design.md  sdk-reference.md  session-state-2026-04-15.md
.devcontainer/: Dockerfile  devcontainer.json
.github/integration/: ADMIN_SETUP.md  codex_review_prompt.md  moonbridge-config.yml  scope_defaults.yml  scope_map.yml
.github/scripts/: build_integration_review_pack.py  codex_review.py  filter_credentialed_cells.py  integration_matrix.py  select_integration_provider.py  setup_codex_deepseek_bridge.sh
.github/workflows/: ci-daily.yaml  integration-eval.yml  integration-final-review.yml  integration-light.yml  integration-scope.yml  internal-preview-release.yml  manifest-parity.yml  prerelease.yml  public-release.yml  release.yml  test.yml
benchflow/: evaluate.py  task.py  verifier.py
benchmarks/: CONVERT.md  parity-dev-0_3-skillsbench-50.yaml  parity-full-oracle-benchflow-0_2_3.yaml  parity-harbor-rerun.yaml  parity-oracle-benchflow.yaml  parity-oracle-harbor.yaml  programbench-gemini-flash-lite.yaml  run_programbench.py  run_programbench.yaml  run_skillsbench.py  run_tb2.py  skillsbench-claude-glm5.yaml  skillsbench-claude-glm51.yaml  skillsbench-codex-gpt54.yaml  skillsbench-openclaw-glm5.yaml  skillsbench.yaml  tb2-ci-baseline.yaml  tb2-gemini-baseline.yaml  tb2-gemini-yolo-unpaired.yaml  tb2-opus-probe-root.yaml  tb2_multiturn-claude-haiku45.yaml  tb2_multiturn-codex-gpt54.yaml  tb2_single-codex-gpt54.yaml
benchmarks/_environments/: README.md  env0@outage.toml  env0@prod.toml
benchmarks/archive/: oracle-gap-verify.yaml  parity-full-haiku-benchflow.yaml  parity-full-haiku-harbor.yaml  parity-full-oracle-benchflow.yaml  parity-full-oracle-harbor.yaml  (+6 more)
context/: 2026-04-18-full-supervisor-record.html  2026-04-18-supervisor-view.html  2026-04-18-supervisor-view.md  tb2-parity-results.ipynb
dashboard/: .gitignore  AUDIT.md  README.md  daytona_status.py  experiments_status.py  generate.py  hf_scores.py  index.html  jobs_root.py  jobs_visibility.py  roadmap.py  serve.py
docs/: 0.3-plan.md  0.7-universal-environment-adapter-plan.md  BENCHMARK_RUNBOOK.md  CLAUDE.md  GAP_ANALYSIS.md  agent-quickstart.md  agentbeats-a2a-adapter-audit.md  api-reference.md  architecture-explorer.html  architecture.md  benchmark-adoption.md  cli-redesign-proposal.md  cli-reference.md  code-review-bench.md  concepts.md  continue-runs.md  docs.json  environment-plane.md  followup-bench.md  getting-started.md  harden-sandbox.md  index.md  integration-review-rubric.md  integration-tests.md  integration-tiers.md  introduction.mdx  labs.md  llm-judge.md  models-as-skills.md  multi-agent-adapters.md  network-mode-prior-art.md  progressive-disclosure.md  quickstart.md  quickstart.mdx  release-gate-2026-05-19.md  release.md  running-any-benchmark.md  running-benchmarks.md  runtime-guide.md  sandbox-hardening.md  (+18 more)
examples/: README.md  coder-reviewer-demo.py  environment_protocol.md  medqa_openai.py  scene-patterns.md  scene-patterns.py  smolclaws_eval.py  swebench_pro_progressive_disclosure.ipynb  swebench_pro_user_dogfood.py  test_bird.py  test_claude.sh  test_codex.sh  test_gemini.sh  test_medqa.py  test_openclaw.sh  test_swebench.py  test_webarena.py  test_webcanvas.py  user_dogfood.py
experiments/: ablation-results.csv  ablation-retry-results.csv  ablation_retry.py  reviewer_ablation.py  run-ablation-retry.sh  skillsbench-byos-validation.csv  skillsbench-skill-creator-validation.csv  swebench-pro-progressive-results.json  swebench-pro-results.csv  swebench_pro_oracle_and_baseline.py  tb2-scene-validation-v2.csv  tb2-scene-validation.csv  v05-cycle-f-resume.sh  v05-gemini-feature-rollout.sh  v05-gemini-large-validation.sh  validate_multi_scene_lifecycle.py
labs/: README.md
onramp/: README.md  __init__.py
parity/: TODO.md  run_tb2_multiturn.py
plan/: fix-agent-env.md
scripts/: update_pricing_sources.py  upload_e2e_artifacts_to_hf.py
stress-repros/: LINEAR-ISSUES.md  README.md  p1_concurrency_zero_deadlock.sh  p1_modal_missing_extra_error.sh  p2_3d_scan_calc_broken_oracle.sh  p2_agent_no_model_traceback.sh  p2_agent_timeout_negative.sh  p2_judge_exit0_on_infra_failure.sh  p2_missing_credential_traceback.sh  p2_reasoning_effort_unvalidated.sh  p2_skill_mode_traceback.sh  p3_tasks_dir_nonexistent_traceback.sh
tests/: acceptance_live_harness.py  conftest.py  init_cli_helpers.py  test_a2a_participant_adapter_contract.py  test_a2a_participant_client.py  test_acceptance_evidence.py  test_acceptance_live.py  test_acceptance_live_execution.py  test_acp.py  test_acp_capability_advertising.py  test_acp_mcp_servers.py  test_acp_model_config_dispatch.py  test_acp_pinned_protocol_guard.py  test_acp_setup_failure_propagation.py  test_adapter_scripts.py  test_adapters.py  test_agent_browser_use_agent.py  test_agent_browser_use_cli.py  test_agent_browser_use_smoke.py  test_agent_cli.py  test_agent_computer_use_agent.py  test_agent_computer_use_smoke.py  test_agent_driver.py  test_agent_env_resolution.py  test_agent_gemini_defaults.py  test_agent_idle_timeout_cli.py  test_agent_instructions.py  test_agent_judge_inputs.py  test_agent_model_decouple.py  test_agent_registry.py  test_agent_router.py  test_agent_router_cli_e2e.py  test_agent_router_scaffold.py  test_agent_setup.py  test_agent_spec.py  test_agent_stagehand_agent.py  test_agents_manifest.py  test_api_error_capture.py  test_arena.py  test_arena_bootstrap.py  (+339 more)
tools/: lock.py  push-task-standard-handoff.sh  release_version.py
tutorials/: README.md
(+1308 files in other folders)
