[project]
name = "benchflow"
version = "0.5.0.dev0"
description = "Multi-turn agent benchmarking with ACP — run any agent, any model, any provider."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["benchmark", "llm-agents", "acp", "agent-evaluation", "multi-turn", "skillsbench"]
dependencies = [
    "agent-client-protocol>=0.10",
    "httpx>=0.27.0",
    "anyio>=4.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "rich>=13.0",
    "tomli-w>=1.0",
    "typer>=0.9",
    "openreward>=0.1.126",
]
authors = [
    { name = "Xiangyi Li", email = "xiangyi@benchflow.ai" },
    { name = "Kyoung Whan Choe", email = "choe.kyoung@gmail.com" },
]

maintainers = [
    { name = "Xiangyi Li", email = "xiangyi@benchflow.ai" },
    { name = "Kyoung Whan Choe", email = "choe.kyoung@gmail.com" },
]

license = { text = "Apache-2.0" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "ty>=0.0.1a1",
]
sandbox-daytona = [
    "daytona>=0.153.0",
    "tenacity>=8.0",
]
sandbox-modal = [
    "modal>=0.73",
    "tenacity>=8.0",
]
bedrock = [
    "boto3>=1.40",
]
# Provider SDKs for the llm-judge verifier (type = "llm-judge").
# llm.py routes judge calls across all three; install at least one.
judge = [
    "anthropic>=0.40",
    "openai>=1.40",
    "google-genai>=1.0",
]

[project.scripts]
benchflow = "benchflow.cli.main:app"
bench = "benchflow.cli.main:app"

[project.urls]
Homepage = "https://github.com/benchflow-ai/benchflow"
Repository = "https://github.com/benchflow-ai/benchflow"
Issues = "https://github.com/benchflow-ai/benchflow/issues"
Discord = "https://discord.gg/mZ9Rc8q8W3"
Changelog = "https://github.com/benchflow-ai/benchflow/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
# Allowlist: only ship what the installed package needs.
only-include = [
    "src",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not live and not integration and not docker and not openreward'"
testpaths = ["tests"]
markers = [
    "live: requires real Anthropic API and Docker daemon (run with -m live)",
    "integration: full integration tests — requires GEMINI_API_KEY + DAYTONA_API_KEY (run with -m integration)",
    "docker: requires only a reachable Docker daemon — no API keys (run with -m docker)",
    "openreward: requires OPENREWARD_API_KEY + the openreward client; runs a real managed rollout (run with -m openreward)",
]

[tool.ruff]
target-version = "py312"
# Vendored third-party service packages baked into task images (e.g. the
# smolclaws claw-* sources copied under a ClawsBench task's environment/) are
# not BenchFlow code — do not lint them.
extend-exclude = [
    ".claude/skills/skill-creator",
    "benchmarks/**/tasks/**/environment/claw-*",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long — ruff format handles wrapping; long lines are intentional
    "RUF002", # ambiguous unicode in docstrings — × is intentional for "agent × model" matrix
    "RUF022", # __all__ unsorted — grouped by section for agent-friendliness
]

[tool.ruff.lint.per-file-ignores]
# Standalone scripts — sys.path manipulation before imports is intentional
"experiments/*.py" = ["E402"]
"tests/conformance/*.py" = ["E402"]
# Notebooks: cell-local imports + short loop vars are notebook conventions
"docs/examples/*.ipynb" = ["E402", "E741", "SIM115"]
# Forward references resolved via __future__ annotations — ruff flags them
# but they work at runtime; explicit TYPE_CHECKING imports would force eager loads.
"src/benchflow/runtime.py" = ["F821"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
# Many modules lazily import optional deps (daytona, modal, openai, toml, …).
# These are guarded by try/except at runtime but ty can't resolve them in CI.
unresolved-import = "ignore"

[tool.ty.src]
include = ["src"]
# Modules that heavily use optional-dep types (daytona, modal, openai, boto3, …)
# produce cascading type errors when those packages aren't installed.
exclude = [
    "src/benchflow/sandbox/daytona.py",
    "src/benchflow/sandbox/modal_impl.py",
    "src/benchflow/sandbox/docker.py",
    "src/benchflow/sandbox/_base.py",
    "src/benchflow/_env_setup.py",
    "src/benchflow/rewards/llm.py",
    "src/benchflow/rewards/file_readers.py",
    "src/benchflow/rewards/rubric_config.py",
    "src/benchflow/providers/bedrock_runtime.py",
    "src/benchflow/experimental/mcp/reviewer_server.py",
]
